# ros_faster_rcnn

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: faster_rcnn.launch
msg/: Detection.msg  DetectionFull.msg
src/: imageLoader.py  simpleDetect.py
srv/: Detect.srv  DetectFull.srv
